minor fixes on javadoc and some optimized code (Integer.valueof(i) instead of new Integer(i) )