@@ -26,7 +26,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import net.jcip.annotations.ThreadSafe;
@@ -47,7 +46,6 @@ import org.jboss.wise.core.client.impl.reflection.InvocationResultImpl;
 import org.jboss.wise.core.client.jaxrs.RSDynamicClient;
 import org.jboss.wise.core.mapper.WiseMapper;
 
-
 /*
  * TODO:
  * 1. return headers
@@ -62,25 +60,27 @@ import org.jboss.wise.core.mapper.WiseMapper;
 public class RSDynamicClientImpl implements RSDynamicClient {
     private final Logger log = Logger.getLogger(RSDynamicClientImpl.class);
 
-    private String resourceURI;
+    private final String resourceURI;
     private String user;
     private String password;
-    private String produceMediaTypes;
-    private String consumeMediaTypes;
-    private HttpMethod httpMethod;
-    private HttpClient httpClient;
+    private final String produceMediaTypes;
+    private final String consumeMediaTypes;
+    private final HttpMethod httpMethod;
+    private final HttpClient httpClient;
     private Map<String, String> requestHeaders = new HashMap<String, String>();
-
 
     /**
      * Invoke JAXRS service.
-     *
+     * 
      * @param resourceURI
-     * @param produceMediaTypes: default to "* / *"
-     * @param consumeMediaTypes: default to "* / *"
+     * @param produceMediaTypes default to "* / *"
+     * @param consumeMediaTypes default to "* / *"
      * @param httpMethod
      */
-    public RSDynamicClientImpl(String resourceURI, String produceMediaTypes, String consumeMediaTypes, HttpMethod httpMethod) {
+    public RSDynamicClientImpl( String resourceURI,
+                                String produceMediaTypes,
+                                String consumeMediaTypes,
+                                HttpMethod httpMethod ) {
         this.resourceURI = resourceURI;
         this.produceMediaTypes = produceMediaTypes;
         this.consumeMediaTypes = consumeMediaTypes;
@@ -89,7 +89,11 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         this.httpClient = new HttpClient();
     }
 
-    public RSDynamicClientImpl(String resourceURI, String produceMediaTypes, String consumeMediaTypes, HttpMethod httpMethod, Map<String, String> requestHeaders) {
+    public RSDynamicClientImpl( String resourceURI,
+                                String produceMediaTypes,
+                                String consumeMediaTypes,
+                                HttpMethod httpMethod,
+                                Map<String, String> requestHeaders ) {
         this.resourceURI = resourceURI;
         this.produceMediaTypes = produceMediaTypes;
         this.consumeMediaTypes = consumeMediaTypes;
@@ -99,15 +103,15 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         this.httpClient = new HttpClient();
     }
 
-    public String getResourceURI(){
+    public String getResourceURI() {
         return resourceURI;
     }
 
-    public String getUser(){
+    public String getUser() {
         return user;
     }
 
-    public String getPassword(){
+    public String getPassword() {
         return password;
     }
 
@@ -123,19 +127,20 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         return consumeMediaTypes;
     }
 
-    public InvocationResult invoke(Map<String, Object> inputObjects,
-                                    WiseMapper mapper) {
-        //NOT SUPPORTED
-        //transform inputObjects to String or InputStream using WiseMapper?
+    public InvocationResult invoke( Map<String, Object> inputObjects,
+                                    WiseMapper mapper ) {
+        // NOT SUPPORTED
+        // transform inputObjects to String or InputStream using WiseMapper?
         return null;
     }
 
-    public InvocationResult invoke(InputStream request,
-                                    WiseMapper mapper) {
+    public InvocationResult invoke( InputStream request,
+                                    WiseMapper mapper ) {
         return invoke(new InputStreamRequestEntity(request), mapper);
     }
 
-    public InvocationResult invoke(String request, WiseMapper mapper) {
+    public InvocationResult invoke( String request,
+                                    WiseMapper mapper ) {
         RequestEntity requestEntity = null;
         try {
             requestEntity = new StringRequestEntity(request, produceMediaTypes, "UTF-8");
@@ -145,12 +150,12 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         return invoke(requestEntity, mapper);
     }
 
-    public InvocationResult invoke(byte[] request,
-                                    WiseMapper mapper) {
+    public InvocationResult invoke( byte[] request,
+                                    WiseMapper mapper ) {
         return invoke(new ByteArrayRequestEntity(request), mapper);
     }
 
-    public InvocationResult invoke(File request,
+    public InvocationResult invoke( File request,
                                     WiseMapper mapper ) {
         return invoke(new FileRequestEntity(request, produceMediaTypes), mapper);
     }
@@ -160,7 +165,8 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         return invoke(requestEntity, null);
     }
 
-    public InvocationResult invoke(RequestEntity requestEntity, WiseMapper mapper) {
+    public InvocationResult invoke( RequestEntity requestEntity,
+                                    WiseMapper mapper ) {
         InvocationResult result = null;
         Map<String, Object> responseHolder = new HashMap<String, Object>();
 
@@ -170,15 +176,15 @@ public class RSDynamicClientImpl implements RSDynamicClient {
 
             try {
                 int statusCode = httpClient.executeMethod(get);
-                //TODO: Use InputStream
+                // TODO: Use InputStream
                 String response = get.getResponseBodyAsString();
-                responseHolder.put(InvocationResult.STATUS, new Integer(statusCode));
+                responseHolder.put(InvocationResult.STATUS, Integer.valueOf(statusCode));
 
                 result = new InvocationResultImpl(InvocationResult.RESPONSE, response, responseHolder);
 
                 // System.out.print(response);
-            } catch(IOException e) {
-                //TODO:
+            } catch (IOException e) {
+                // TODO:
             } finally {
                 get.releaseConnection();
             }
@@ -191,13 +197,13 @@ public class RSDynamicClientImpl implements RSDynamicClient {
             try {
                 int statusCode = httpClient.executeMethod(post);
                 String response = post.getResponseBodyAsString();
-                responseHolder.put(InvocationResult.STATUS, new Integer(statusCode));
+                responseHolder.put(InvocationResult.STATUS, Integer.valueOf(statusCode));
 
                 result = new InvocationResultImpl(InvocationResult.RESPONSE, response, responseHolder);
 
                 // System.out.print(response);
-            } catch(IOException e) {
-                //TODO:
+            } catch (IOException e) {
+                // TODO:
             } finally {
                 post.releaseConnection();
             }
@@ -210,13 +216,13 @@ public class RSDynamicClientImpl implements RSDynamicClient {
             try {
                 int statusCode = httpClient.executeMethod(put);
                 String response = put.getResponseBodyAsString();
-                responseHolder.put(InvocationResult.STATUS, new Integer(statusCode));
+                responseHolder.put(InvocationResult.STATUS, Integer.valueOf(statusCode));
 
                 result = new InvocationResultImpl(InvocationResult.RESPONSE, response, responseHolder);
 
                 // System.out.print(response);
-            } catch(IOException e) {
-                //TODO:
+            } catch (IOException e) {
+                // TODO:
             } finally {
                 put.releaseConnection();
             }
@@ -227,13 +233,13 @@ public class RSDynamicClientImpl implements RSDynamicClient {
             try {
                 int statusCode = httpClient.executeMethod(delete);
                 String response = delete.getResponseBodyAsString();
-                responseHolder.put(InvocationResult.STATUS, new Integer(statusCode));
+                responseHolder.put(InvocationResult.STATUS, Integer.valueOf(statusCode));
 
                 result = new InvocationResultImpl(InvocationResult.RESPONSE, response, responseHolder);
 
                 // System.out.print(response);
-            } catch(IOException e) {
-                //TODO:
+            } catch (IOException e) {
+                // TODO:
             } finally {
                 delete.releaseConnection();
             }
@@ -242,7 +248,7 @@ public class RSDynamicClientImpl implements RSDynamicClient {
         return result;
     }
 
-    private void setRequestHeaders(HttpMethodBase method) {
+    private void setRequestHeaders( HttpMethodBase method ) {
         if (produceMediaTypes != null) {
             method.setRequestHeader("Content-Type", produceMediaTypes);
         }
